[package]
name = "utility-types"
version = "0.0.2"
edition = "2021"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
license = "MIT"
readme = "README.md"
keywords = ["macro", "proc-macro"]
categories = ["development-tools"]
repository = "https://github.com/duskmoon314/utility-rs.git"
description = "This crate use proc-macro to realize several utility types of TypeScript"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
trybuild = { version = "1.0.93", features = ["diff"] }
